1337: User avatar. Please adjust picture uploader, so it should be cropped correct

--- a/src/Compent.uIntra/App_Plugins/Core/Content/styles/Core.css
+++ b/src/Compent.uIntra/App_Plugins/Core/Content/styles/Core.css
@@ -607,6 +607,7 @@ h5{
     white-space: nowrap;
     position: relative;
     text-transform:uppercase;
+    cursor:pointer;
 
     &:hover{
         background-color:#dedede;
@@ -755,12 +756,10 @@ h5{
     }
 
     &__img{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        height: auto;
-        transform: translate(-50%, -50%);
-        max-width:100%;
+        height:100%;
+        width:100%;
+        object-fit:cover;
+        display:block;
     }
 
     &__letter{
