--- a/src/Compent.uIntra/App_Plugins/Navigation/LeftNavigation/leftNavigation.css
+++ b/src/Compent.uIntra/App_Plugins/Navigation/LeftNavigation/leftNavigation.css
@@ -292,6 +292,9 @@
         margin:0 10px 0 -40px;
         border-radius:50%;
         float:left;
+        width:30px;
+        height:30px;
+        object-fit:cover;
     }
 
     @media (--for-tablet-portrait-down) {       
